--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.6"
   },
